@@ -1,3 +1,15 @@
+2009-04-29  Feng Qian  <feng@chromium.org>
+
+        Reviewed by Darin Adler.
+
+        Add Android-specific files to the WebCore/page directory.
+        https://bugs.webkit.org/show_bug.cgi?id=23295
+
+        * page/android: Added.
+        * page/android/DragControllerAndroid.cpp: Added.
+        * page/android/EventHandlerAndroid.cpp: Added.
+        * page/android/InspectorControllerAndroid.cpp: Added.
+
 2009-04-29  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Timothy Hatcher.
